--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
+html{
+    background-color: rgba(224, 224, 236, 0.26);
+
+}
 .produitsRecent{
     /* text-align: center; */
     background-color: aquamarine;
@@ -9,4 +14,28 @@
 #produitSeule{
     
     background-color: rgb(41, 241, 175);
+}
+
+
+#navigationBar {
+    background-color: rgba(0, 0, 255, 0.253);
+    border-radius: 16px;
+    padding: 15px;
+    width: -webkit-fill-available;
+    text-align: right;
+}
+
+#navigationBar a {
+    background-color: rgba(89, 89, 238, 0.719);
+    color: white;
+    text-decoration: none;
+    padding: 14px;
+    margin: 30px;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-family: 'Montserrat', sans-serif;
+}
+
+#navigationBar a:hover {
+    background-color: rgba(89, 89, 238, 0.89);
 }
