--- a/styleLoginRegister.css
+++ b/styleLoginRegister.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
+body {
+    padding: 0;
 
+}
 
 html {
     background-color: white;
@@ -8,12 +11,15 @@ form {
     margin: 0 auto; 
     }
 
+    h2 {
+        margin-top: 2px;
+    }
 form {
     background-color: #F0F1F3;
     width: fit-content;
     border-radius: 10px;
-    text-align: center;
-    padding: 70px;
+    /* text-align: center; */
+    padding: 55px;
 }
 .loginForm {
     /* background-color: #F0F1F3;
@@ -29,6 +35,7 @@ form {
     padding: 10px;
     color: white;
     border-radius: 10px;
+    width: 100%;
 }
 .loginForm input::placeholder {
     font-family: 'Montserrat', sans-serif;
@@ -37,6 +44,10 @@ form {
     font-style: italic;
 }
 
+.loginForm input[type="submit"]{
+    background-color: rgb(189, 109, 109);
+    width: min-content;
+}
 
 
 #selfForm ,td {
