--- a/style.css
+++ b/style.css
@@ -31,7 +31,8 @@ html{
     border-radius:10px;
 }
 #produitSeule button {
-    background-color: rgba(0, 0, 255, 0.4);
+    /* background-color: rgba(0, 0, 255, 0.4); */
+    background-color: rgba(189, 109, 109, 0.65);
     border: none;
     padding: 10px;
     border-radius: 10px;
@@ -73,6 +74,11 @@ html{
     border-style: none;
     background-color: rgb(169,169,169);
 }
+
+#navigationBar input::placeholder {
+    color: white;
+    font-size: 15px;
+}
 .categorie a {
     background-color: rgba(170, 170, 170, 0.22);
     padding: 9px;
@@ -105,6 +111,11 @@ html{
 #rightBox h2{
     font-family: 'MontserratBold';
     text-transform: uppercase;
+    /*added*/
+    background: rgba(189, 109, 109, 0.2);
+    border-radius: 9px;
+    padding: 9px;
+    color: white;
 }
 
 #eachProducts {
